.travis.yml changed

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ before_install:
  - sudo apt-get install qt5-default qttools5-dev-tools
 
 script:
- - qmake -project
+ - qmake -lab8
  - qmake Ultron.pro
  - make
 
