.travis.yml changed

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,11 @@
+sudo: required
+language: cpp
+os:
+  - linux
+compiler: 
+  - gcc
 before_install:
   - sudo add-apt-repository --yes ppa:ubuntu-sdk-team/ppa
   - export QMAKE=/usr/lib/x86_64-linux-gnu/qt5/bin/qmake
 script:
-    - qmake -qt=qt5 -v
-    - qmake -qt=qt5
     - make
