--- a/.travis.yml
+++ b/.travis.yml
@@ -8,5 +8,7 @@ before_install:
   - sudo apt-get install libqt5-dev
   - sudo add-apt-repository --yes ppa:ubuntu-sdk-team/ppa
   - export QMAKE=/usr/lib/x86_64-linux-gnu/qt5/bin/qmake
+install:
+  - sudo apt-get install libqt5-dev
 script:
   - qmake -qt=qt5
